php-k8s(Blogging Website on Kubernates)/k8s/database.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mysql-database
spec:
  selector:
    matchLabels:
      component: database #database label for mysql database.
  template:
    metadata:
      labels:
        component: database #database label for mysql database.
    spec:
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim # define the name of claim same as in [database-persistent-volume-claim.yaml]
      containers:
        - name: mysql-database
          image: mysql:5.7
          volumeMounts:
            - mountPath: /home/pankaj/Projects/PHP-Docker/database-storage #[Define the location of Database path].
              name: database
          ports:
            - containerPort: 3306 #Port Inside the container.
