php-k8s(Blogging Website on Kubernates)/k8s/database-sevice.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: database-service
spec:
  type: ClusterIP
  selector:
    component: database # Map the label that you have created in database-service.yaml.
  ports:
    - port: 3306
      targetPort: 3306
